tests/tests/ui/err/greedy-without-config.rs
use logos::Logos;

#[derive(Logos)]
enum Token {
    #[regex("(a|b.*)")]
    Dotall,
}

fn main() {}
